# mlds

./: .gitignore  MLproject  pyproject.toml
Proy/: pyvenv.cfg
Proy/Scripts/: activate  activate.bat
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/infrastructure/: infrastructure_docs.md
docs/modeling/: baseline_models.md  model_report.md
packagename/: main.py
packagename/database/: database.py
packagename/evaluation/: metrics.py  metricstypes.py
packagename/models/: hparams.py  models.py  modelstypes.py
packagename/preprocessing/: preprocessing.py  transformation.py
